# django-valkey

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.rst  CHANGES.md  CHANGES.rst  README.rst  compose.yaml  mkdocs.yml  pyproject.toml  tasks.py
.github/workflows/: black.yaml  ci.yml  publish.yaml  release.yml  ruff.yaml
django_valkey/: __init__.py  base.py  base_client.py  base_pool.py  cache.py  exceptions.py  hash_ring.py  pool.py  util.py
django_valkey/async_cache/: __init__.py  cache.py  pool.py
django_valkey/async_cache/client/: __init__.py  default.py  herd.py  sentinel.py
django_valkey/client/: __init__.py  default.py  herd.py  sentinel.py  sharded.py
django_valkey/cluster_cache/: cache.py  pool.py
django_valkey/cluster_cache/client/: __init__.py  default.py
django_valkey/compressors/: base.py  brotli.py  bz2.py  gzip.py  identity.py  lz4.py  lzma.py  zlib.py  zstd.py
django_valkey/serializers/: json.py  msgpack.py  msgspec.py  pickle.py
dockers/: Dockerfile.cluster  cluster.valkey.conf  create_cluster.sh  sentinel.conf
docs/: .nav.yml  changes.md  customize.md  index.md  installation.md  migration_from_django_redis.md
docs/async/: .nav.yml  access_to_pool.md  advanced_configurations.md  async_commands.md  configurations.md  raw_access.md
docs/cluster/: .nav.yml  basic_configurations.md
docs/commands/: .nav.yml  connection_pool_commands.md  raw_access.md  valkey_native_commands.md
docs/configure/: .nav.yml  advanced_configurations.md  basic_configurations.md  compressors.md  sentinel_configurations.md
docs/source/: changes.rst  conf.py  customize.rst  index.rst  installation.rst  migration.rst
docs/source/async/: access_to_pool.rst  advanced_configurations.rst  async.rst  async_commands.rst  configuration.rst
docs/source/commands/: commands.rst  connection_pool_commands.rst  valkey_native_commands.rst
docs/source/configure/: advanced_configurations.rst  basic_configurations.rst  compressors.rst  configurations.rst  sentinel_configurations.rst
tests/: README.rst  conftest.py  start_valkey.sh  test_backend.py  test_cache_options.py  test_client.py  test_connection_factory.py  test_connection_string.py  test_hashring.py  test_serializers.py  test_session.py  wait_for_valkey.sh
tests/settings/: sqlite.py  sqlite_async.py  sqlite_async_herd.py  sqlite_async_sentinel.py  sqlite_async_sentinel_opts.py  sqlite_brotli.py  sqlite_bz2.py  sqlite_cluster.py  sqlite_gzip.py  sqlite_herd.py  sqlite_json.py  sqlite_lz4.py  sqlite_msgpack.py  sqlite_msgspec_json.py  sqlite_msgspec_msgpack.py  sqlite_sentinel.py  sqlite_sentinel_opts.py  sqlite_sharding.py  sqlite_usock.py  sqlite_usock_async.py  sqlite_zlib.py  sqlite_zstd.py  urls.py
tests/tests_async/: conftest.py  test_backend.py  test_cache_options.py  test_client.py  test_connection_factory.py  test_connection_string.py  test_requests.py  test_session.py
tests/tests_cluster/: test_backend.py  test_cache_options.py  test_client.py
util/: wait-for-it.sh
