[project]
name = "django-valkey"
version = "0.2.0.post1"
description = "a valkey backend for django"
authors = [
    {name = "amirreza",email = "amir.rsf1380@gmail.com"}
]
license = {text = "BSD-3-Caluse"}
readme = "README.rst"
classifiers = [
    "Programming Language :: Python",
    "Environment :: Web Environment",
    "Development Status :: 4 - Beta" ,
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
]
include = ["AUTHORS.rst"]
requires-python = ">=3.10"

dependencies = [
    "django (>=4.2.20)",
    "valkey (>=6.0.2)",
    "sphinx (>=8.0.2)",
]

[project.optional-dependencies]
libvalkey = ["libvalkey (>=4.0.1,<5.0.0)"]
lz4 = ["lz4 (>=4.3.3,<5.0.0)"]
pyzstd = ["pyzstd (>=0.16.2,<0.17.0)"]
msgpack = ["msgpack (>=1.1.0,<2.0.0)"]
brotli = ["brotli (>=1.1.0,<2.0.0)"]

[tool.poetry.urls]
Homepage = "https://github.com/django-utils/django-valkey"
Source = "https://github.com/django-utils/django-valkey"
Issues = "https://github.com/django-utils/django-valkey/issues"
Documentation = "https://django-valkey.readthedocs.io/en/latest/"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
coverage = "^7.7.0"
django-coverage-plugin = "^3.1.0"
django-cmd = "^2.6"
django-stubs = "^5.1.3"
invoke = "^2.2.0"
mypy = "^1.15.0"
pre-commit = "^4.1.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
pytest-django = "^4.10.0"
pytest-mock = "^3.14.0"
ruff = "^0.11.0"


[tool.poetry.group.docs.dependencies]
sphinx-pdj-theme = "^0.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
pretty = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[tool.django-stubs]
django_settings_module = "tests.settings.sqlite"
ignore_missing_settings = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings.sqlite"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.coverage.run]
plugins = ["django_coverage_plugin"]
parallel = true


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]
