[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-valkey"
version = "0.3.0"
description = "a valkey backend for django"
readme = "README.rst"
requires-python = ">=3.10"
license = "BSD-3-Clause"
maintainers = [
    {name = "amirreza",email = "amir.rsf1380@gmail.com"},
]
classifiers = [
    "Programming Language :: Python",
    "Environment :: Web Environment",
    "Development Status :: 4 - Beta" ,
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
]

dependencies = [
    "django>=4.2",
    "valkey>=6.0.2",
]


[project.optional-dependencies]
libvalkey = [
    "libvalkey>=4.0.1",
]
lz4 = [
    "lz4>=4.3.3",
]
pyzstd = [
    "pyzstd>=0.16.2",
]
msgpack = [
    "msgpack>=1.1.0",
]
brotli = [
    "brotli>=1.1.0",
]

[dependency-groups]
dev = [
    "anyio>=4.9.0",
    "coverage>=7.8.0",
    "django-cmd>=2.6",
    "django-coverage-plugin>=3.1.0",
    "django-stubs>=5.1.3",
    "invoke>=2.2.0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.14.0",
    "pytest-subtests>=0.14.1",
    "ruff>=0.12.5",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-nav>=3.1.1",
    "mkdocs-material>=9.6.12",
]
ipython = [
    "ipython>=8.35.0",
]

[project.urls]
Homepage = "https://github.com/django-utils/django-valkey"
Source = "https://github.com/django-utils/django-valkey"
Issues = "https://github.com/django-utils/django-valkey/issues"
Documentation = "https://django-valkey.readthedocs.io/en/latest/"



[tool.mypy]
plugins = ["mypy_django_plugin.main"]
pretty = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[tool.django-stubs]
django_settings_module = "tests.settings.sqlite"
ignore_missing_settings = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings.sqlite"

[tool.coverage.run]
plugins = ["django_coverage_plugin"]
parallel = true


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]
